--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ configurations {
 
 repositories {
     mavenCentral()
+        maven { url 'https://jitpack.io' }
+
 }
 
 dependencies {
@@ -44,6 +46,9 @@ dependencies {
 
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+
+    implementation 'com.github.shin285:KOMORAN:3.3.9'
+
 
 }
 
